--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,6 +1,6 @@
 load("@pip//:requirements.bzl", "all_requirements")
-load("@rules_python//python:defs.bzl", "py_test")
 load("@rules_python//python:pip.bzl", "compile_pip_requirements")
+load(":defs.bzl", "py_host_test")
 
 platform(
     name = "arm64",
@@ -18,11 +18,12 @@ compile_pip_requirements(
         "--allow-unsafe",
         "--strip-extras",
     ],
+    py_test = py_host_test,
     requirements_in = "requirements.in",
     requirements_txt = "requirements_lock_linux.txt",
 )
 
-py_test(
+py_host_test(
     name = "test",
     srcs = [
         ":pytest_wrapper.py",
